--- a/.github/workflows/SimplePipeline.yml
+++ b/.github/workflows/SimplePipeline.yml
@@ -4,9 +4,8 @@ name: Simple Pipeline
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   schedule:
-    - cron: "55 4 * * *"
+    - cron: "*/5 * * * *"
 
   # Allows you to run this workflow manually from the Actions tab
   # workflow_dispatch:
