--- a/.github/workflows/SimplePipeline.yml
+++ b/.github/workflows/SimplePipeline.yml
@@ -4,8 +4,8 @@ name: Simple Pipeline
 
 # Controls when the workflow will run
 on:
-  schedule:
-    - cron: "*/5 * * * *"
+  branch: [main]
+  
 
   # Allows you to run this workflow manually from the Actions tab
   # workflow_dispatch:
